# Media-Manager

./: .gitignore  5.0.0  BUILD.md  BUILDING_NOTE.txt  BUILD_FAILURE_ANALYSIS.md  BUILD_FIXES_APPLIED.md  BUILD_GUIDE.md  BUILD_WINDOWS.md  CONTEXT.md  CRITICAL_FIX_INFINITE_SPAWN.md  Cargo.toml  INSTALLATION.md  MIGRATION.md  README.md  REBUILD_AND_TEST_GUIDE.md  VIDEO_PLAYBACK_ISSUES.md  WINDOWS_BUILD_FIX.md  build.bat  build.py  jest.config.js  package-lock.json  package.json  requirements.txt  run.py  setup.py  tsconfig.json  tsconfig.main.json  video_manager.spec  webpack.main.config.js  webpack.renderer.config.js
.circleci/: config.yml
media_manager_cli/: Cargo.toml
media_manager_cli/src/: main.rs
media_manager_cli/tests/: cli_config.rs
media_manager_core/: Cargo.toml
media_manager_core/src/: config.rs  error.rs  lib.rs  media_file.rs  metadata.rs  renamer.rs  scanner.rs  subtitles.rs  undo.rs
scripts/: real_movie_test.js  verify-build.js  verify-functionality.js
src/: setupTests.ts
src/main/: cliBridge.ts  main.ts  preload.ts
src/renderer/: index.html  index.tsx
src/renderer/components/: App.tsx  FileExplorer.tsx  MediaPreview.tsx  RenamePanel.tsx  (+1 more)
video_manager/: __init__.py  __main__.py
video_manager/core/: __init__.py  batch_operations.py  cache_manager.py  config.py  database.py  file_operations.py  file_scanner.py  metadata_extractor.py  thumbnail_generator.py
video_manager/ui/: __init__.py  file_list_model.py  main_window.py  metadata_panel.py  operations_queue.py  settings_dialog.py  video_preview.py
video_manager/utils/: __init__.py
(+12 files in other folders)
