[package]
name = "media_manager_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
media_manager_core = { path = "../media_manager_core", features = ["test"] } # Link to our core library
log = "0.4"
env_logger = "0.10" # For CLI logging
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"    # For testing CLI applications
predicates = "3.0"    # For making assertions about command output
tempfile = "3.8"      # For creating temporary test directories
