[package]
name = "media_manager_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tempfile = "3"
log = "0.4"
thiserror = "1.0"
tokio-stream = "0.1"
async-recursion = "1.0"
directories = "5.0"
